@@ -7,13 +7,19 @@
 ----------------------------------------------------------------------
 
  - Updated Swedish translation (Christian Rose).
+ - Updated Spanish translation (Pablo del Campo).
  - Fixed possible blank userlist after another tab was detached.
  - Changed default keybinding for next/prev-tab to ctrl-pageup/down,
    as per standard.
  - Added IPAddress field to "DCC SEND Offer" text event.
  - Fixed perl IRC::print_with_channel 1.8.x incompatibility.
+ - xtext: Fixed bugs in new scrolling code.
+ - Use filesystem encoding for log filenames.
  - 
  - 
+ TODO:
+  * fix xtext grid_offset[]
+  * fix bad inputgad focus tracking (done, testing)
 
 
 ----------------------------------------------------------------------
